get0 durch getfirst